# osc-serverless

./: .gitignore  Gopkg.toml  Makefile  README.md
autogenerated/: openapi.yaml
autogenerated/go-model/: model_backup_request_fragment.go  model_backup_resource_fragment.go  model_bandwidth_resource.go  model_block_volume_request_fragment.go  model_block_volume_resource_fragment.go  model_block_volume_resource_fragment_attachments.go  model_cloud_provider_info.go  model_cloud_server_request_fragment.go  model_cloud_server_request_fragment_nics.go  model_cloud_server_request_fragment_publicip.go  model_cloud_server_request_fragment_publicip_eip.go  model_cloud_server_request_fragment_root_volume.go  model_cloud_server_request_fragment_security_groups.go  model_cloud_server_resource_fragment.go  model_cloud_server_resource_fragment_flavor.go  model_cloud_server_resource_fragment_osextendedvolumesvolumes_attached.go  model_compute_resource_create_request.go  model_compute_resource_spec.go  model_error_spec.go  model_file_share_request_fragment.go  model_file_share_resource_fragment.go  model_network_resource_create_request.go  (+12 more)
osc-config/: app_install_etcd.sh  config_hwcloud.yaml  osc_request_compute.yaml  osc_request_network.yaml  osc_request_storage.yaml
osc-manager/: main.go
osc-runtime/: Cargo.toml
osc-runtime-js/: index.html  nginx_config.sh  package.json  webpack.config.js
osc-runtime/crates/runtime-engine/: Cargo.toml  test.js
osc-runtime/crates/runtime-engine/pkg/: package.json  runtime_engine_bg.wasm
osc-runtime/crates/runtime-engine/src/: lib.rs
(+282 files in other folders)
