[package]
name = "runtime-engine"
version = "0.1.0"
authors = ["leonwanghui <wanghui71leon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.wasm-bindgen]
version = "0.2.50"
features = ["serde-serialize"]
